style: fix z-index

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -8,9 +8,9 @@
     background-size: cover;
     background-position: right;
     background-attachment: fixed;
+    position: relative;
     width: 100%;
     height: 600px;
-    position: relative;
     
     &__content {
         display: flex;
@@ -22,26 +22,32 @@
 
         .content-intro {
             padding: 10px;
-            color: #ccc;
+            color: #fff;
             font-size: 23px;
-            background-color: rgba(0, 0, 0, .7);
+            background-color: rgba(0, 0, 0, .2);
+            backdrop-filter: blur(2px);
         }
 
-        .content-btn {
-            margin-top: 20px;
-            background-color: rgb(48, 185, 43);
-            color: #eee;
-            font-weight: 400;
-            font-size: 20px;
-            padding: 15px 35px;
-            border-radius: 10px;
-            cursor: pointer;     
-            outline: none;
-            border: 0;
-            transition: .08s ease-in-out;
-
-            &:hover {
-                background-color: rgb(39, 141, 35);
+        > a {
+            display: block;
+            z-index: 1;
+            
+            .content-btn {
+                margin-top: 20px;
+                background-color: rgb(48, 185, 43);
+                color: #eee;
+                font-weight: 400;
+                font-size: 20px;
+                padding: 15px 35px;
+                border-radius: 10px;
+                cursor: pointer;     
+                outline: none;
+                border: 0;
+                transition: .08s ease-in-out;
+    
+                &:hover {
+                    background-color: rgb(39, 141, 35);
+                }
             }
         }
 
@@ -77,14 +83,3 @@
         }
     }
 }
-
-// @media (min-width: 900px) {
-//     .home {
-
-//         .home-waves {
-//             bottom: -10%;
-//         }
-
-//         // background-position: 100px;
-//     }
-// }
